polybar config file

--- a/polybar/config
+++ b/polybar/config
@@ -25,14 +25,14 @@ Secondary = #e60053
 Cyan = #00acc1
 Red = #FF0000
 SandyBrown = #F4A460
-Darkcyan = #008b8b
-Darkgray = #a9a9a9
+DarkCyan = #008b8b
+DarkGray = #a9a9a9
 Yellow = #fdd835
 Alert = #bd2c40
 Orange = #ffa500
-Dodgerblue = #DCDCDC
+DodgerBlue = #DCDCDC
 Blue = #1e88e5
-Papayawhip = #FFEFD5
+PapayaWhip = #FFEFD5
 Bisque = #FFE4C4
 Lvory1 = #FFFFF0
 Honeydew3 = #C1CDC1
