--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -11,28 +11,26 @@
 shadow = true;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
-shadow-radius = 12
+shadow-radius = 10
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
-shadow-opacity = 0.7
+shadow-opacity = 0.8
 
 # The left offset for shadows, in pixels. (defaults to -15)
-# shadow-offset-x = -15
-shadow-offset-x = -7;
+shadow-offset-x = -15
 
 # The top offset for shadows, in pixels. (defaults to -15)
-# shadow-offset-y = -15
-shadow-offset-y = -7;
+shadow-offset-y = -15
 
 # Avoid drawing shadows on dock/panel windows. This option is deprecated,
 # you should use the *wintypes* option in your config file instead.
 #
-# no-dock-shadow = false
+# no-dock-shadow = true
 
 # Don't draw shadows on drag-and-drop windows. This option is deprecated,
 # you should use the *wintypes* option in your config file instead.
 #
-# no-dnd-shadow = false
+# no-dnd-shadow = true
 
 # Red color value of shadow (0.0 - 1.0, defaults to 0).
 # shadow-red = 0
@@ -41,7 +39,7 @@ shadow-offset-y = -7;
 # shadow-green = 0
 
 # Blue color value of shadow (0.0 - 1.0, defaults to 0).
-shadow-blue = 0
+# shadow-blue = 0
 
 # Do not paint shadows on shaped windows. Note shaped windows
 # here means windows setting its shape through X Shape extension.
@@ -52,7 +50,7 @@ shadow-blue = 0
 #   shadow-exclude = 'bounding_shaped && !rounded_corners'
 # instead.
 #
-# shadow-ignore-shaped = ''
+shadow-ignore-shaped = false
 
 # Specify a list of conditions of windows that should have no shadow.
 #
@@ -190,6 +188,7 @@ blur-background-frame = true
 
 # Use fixed blur strength rather than adjusting according to window opacity.
 blur-background-fixed = true
+blur-strength = 8
 
 
 # Specify the blur convolution kernel, with the following format:
@@ -198,7 +197,6 @@ blur-background-fixed = true
 #
 # blur-kern = ''
 blur-kern = "3x3box";
-
 
 # Exclude conditions for background blur.
 # blur-background-exclude = []
